# url_shorting_fastapi

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: fd7178e88bfd_initial.py
app/urls/: models.py  routers.py  service.py
