[tool.poetry]
name = "fastapi-train-task"
version = "0.1.0"
description = ""
authors = ["gennady <topchiev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
